--- a/index.html
+++ b/index.html
@@ -2,36 +2,51 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="device-width, initial-scale=1">
+        <meta name="viewport" content="initial-scale=1">
         <title>Exchange</title>
-        <script src="waluty.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <style>
-            div.box {
-                height:160px;
-                width:160px;
-                background-color:lightblue;
+            div.column {
+                background-color:#94aac0;
                 display: inline-block;
+                text-align: center;
             }
             section {
                 width: 100vw;
-                min-height: 60vh;
+                min-height: 86vh;
             }
             header, footer {
                 width: 100vw;
-                height: 20vh;
+                height: 7vh;
                 background-color: blueviolet;
+            }
+            footer {
+                color: white;
+                font-size: 20px;
+                padding: 1px;
             }
         </style>
     </head>
     <body>
         <header></header>
         <section>
-            <div class="box" id="one">- Euro -</div>
-            <div class="box" id="two">- Dolar amerykański -</div>
-            <div class="box" id="three">- Funt brytyjski -</div>
-            <div class="box" id="four">- Frank szwajcarski -</div>
+            <div class="columns">
+                <div class="column" id="one">
+                    Euro<br>
+                </div>
+                <div class="column" id="two">
+                    Dolar amerykański<br>
+                </div>
+                <div class="column" id="three">
+                    Funt brytyjski<br>
+                </div>
+                <div class="column" id="four">
+                    Frank szwajcarski<br>
+                </div>
+            </div>
         </section>
-        <footer></footer>
+        <footer id="stopka">©2022 Szymon Tomasiak</footer>
+        <!--skrypt js-->
+        <script src="waluty.js"></script>
     </body>
 </html>
