--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1">
         <title>Exchange</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <style>
             div.column {
                 background-color:#94aac0;
                 display: inline-block;
                 text-align: center;
+                border: 1px solid black;
+
             }
             section {
                 width: 100vw;
@@ -26,21 +27,22 @@
                 padding: 1px;
             }
         </style>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     </head>
     <body>
         <header></header>
         <section>
             <div class="columns">
-                <div class="column" id="one">
+                <div class="column" id="eur">
                     Euro<br>
                 </div>
-                <div class="column" id="two">
+                <div class="column" id="usd">
                     Dolar amerykański<br>
                 </div>
-                <div class="column" id="three">
+                <div class="column" id="gbp">
                     Funt brytyjski<br>
                 </div>
-                <div class="column" id="four">
+                <div class="column" id="chf">
                     Frank szwajcarski<br>
                 </div>
             </div>
