--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <header></header>
         <section>
             <div class="columns">
-                <div class="column" id="eur">
+                <div class="column" id="eur" onmouseover="tendency()" onmouseleave="tendencyOff()">
                     Euro<br>
                     <div><img class="flag" src="eu.svg" alt="Flag of European Union"></div>
                     <h3>Aktualny kurs: </h3>
