--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <style>
             div.column {
-                background-color:#a585cc;
+                background-color:plum;
                 display: inline-block;
                 text-align: center;
                 border: 1px solid black;
@@ -29,7 +29,7 @@
                 font-size: 20px;
                 padding: 1px;
             }
-            .flag{
+            .flags{
                 height:100px;
                 border: 1px double black;
             }
@@ -42,7 +42,7 @@
                 <!--EURO-->
                 <div class="column" id="eur">
                     Euro<br>
-                    <div><img class="flag" src="eu.svg" alt="Flag of European Union"></div>
+                    <div><img class="flags" src="eu.svg" alt="Flag of European Union"></div>
                     <p class="is-size-6 has-text-weight-semibold">Aktualny kurs:
                         <h6 class="is-size-7" id="e0"></h6>
                         <div class="symbol" id="es"></div>
@@ -60,7 +60,7 @@
                 <!--DOLAR-->
                 <div class="column" id="usd">
                     Dolar amerykański<br>
-                    <div ><img class="flag" src="us.svg" alt="Flag of United States of America"></div>
+                    <div ><img class="flags" src="us.svg" alt="Flag of United States of America"></div>
                     <p class="is-size-6 has-text-weight-semibold">Aktualny kurs:
                         <h6 class="is-size-7" id="u0"></h6>
                         <div class="symbol" id="us"></div>
@@ -78,7 +78,7 @@
                 <!--FUNT-->
                 <div class="column" id="gbp">
                     Funt brytyjski<br>
-                    <div><img class="flag" src="gb.svg" alt="Flag of Great Britain"></div>
+                    <div><img class="flags" src="gb.svg" alt="Flag of Great Britain"></div>
                     <p class="is-size-6 has-text-weight-semibold">Aktualny kurs:
                         <h6 class="is-size-7" id="g0"></h6>
                         <div class="symbol" id="gs"></div>
@@ -96,7 +96,7 @@
                 <!--FRANK-->
                 <div class="column" id="chf">
                     Frank szwajcarski<br>
-                    <div ><img class="flag" src="ch.svg" alt="Flag of Switzerland"></div>
+                    <div ><img class="flags" src="ch.svg" alt="Flag of Switzerland"></div>
                     <p class="is-size-6 has-text-weight-semibold">Aktualny kurs:
                         <h6 class="is-size-7" id="c0"></h6>
                         <div class="symbol" id="cs"></div>
@@ -114,7 +114,7 @@
             </div>
         </section>
         <footer id="stopka" class="has-text-grey-lighter is-hover-text-red">©2022 Szymon Tomasiak</footer>
-        <!--skrypt js-->
-        <script src="waluty.js"></script>
+        <!--skrypt js
+        <script src="waluty.js"></script>-->
     </body>
 </html>
