--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
                 display: inline-block;
                 text-align: center;
                 border: 1px solid black;
-                height: 120vh;
+                height: 80vh;
 
 }
             section {
                 border-top: -10px;
                 width: 100vw;
-                height: 120vh;
+                height: 80vh;
             }
             header, footer {
                 width: 100vw;
-                height: 7vh;
+                height: 10vh;
                 background-color: blueviolet;
             }
             footer {
@@ -45,7 +45,6 @@
                     <div><img class="flags" src="eu.svg" alt="Flag of European Union"></div>
                     <p class="is-size-6 has-text-weight-semibold">Aktualny kurs:
                         <h6 class="is-size-7" id="e0"></h6>
-                        <div class="symbol" id="es"></div>
                     </p>
                     <p class="is-size-6 has-text-weight-semibold">Kurs -1 dzień:
                         <h6 class="is-size-7" id="e1"></h6>
@@ -63,7 +62,6 @@
                     <div ><img class="flags" src="us.svg" alt="Flag of United States of America"></div>
                     <p class="is-size-6 has-text-weight-semibold">Aktualny kurs:
                         <h6 class="is-size-7" id="u0"></h6>
-                        <div class="symbol" id="us"></div>
                     </p>
                     <p class="is-size-6 has-text-weight-semibold">Kurs -1 dzień:
                         <h6 class="is-size-7" id="u1"></h6>
@@ -81,7 +79,6 @@
                     <div><img class="flags" src="gb.svg" alt="Flag of Great Britain"></div>
                     <p class="is-size-6 has-text-weight-semibold">Aktualny kurs:
                         <h6 class="is-size-7" id="g0"></h6>
-                        <div class="symbol" id="gs"></div>
                     </p>
                     <p class="is-size-6 has-text-weight-semibold">Kurs -1 dzień:
                         <h6 class="is-size-7" id="g1"></h6>
@@ -99,7 +96,6 @@
                     <div ><img class="flags" src="ch.svg" alt="Flag of Switzerland"></div>
                     <p class="is-size-6 has-text-weight-semibold">Aktualny kurs:
                         <h6 class="is-size-7" id="c0"></h6>
-                        <div class="symbol" id="cs"></div>
                     </p>
                     <p class="is-size-6 has-text-weight-semibold">Kurs -1 dzień:
                         <h6 class="is-size-7" id="c1"></h6>
@@ -114,7 +110,7 @@
             </div>
         </section>
         <footer id="stopka" class="has-text-grey-lighter is-hover-text-red">©2022 Szymon Tomasiak</footer>
-        <!--skrypt js
-        <script src="waluty.js"></script>-->
+        <!--skrypt js-->
+        <script src="waluty.js"></script>
     </body>
 </html>
